--- a/Recommendation_System.ipynb
+++ b/Recommendation_System.ipynb
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "ade7b5d3",
    "metadata": {},
    "outputs": [
@@ -1551,10 +1551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original similarity size: 176.00 MB\n",
-      "Sparse similarity size: 65.87 MB\n",
-      "Files saved successfully!\n",
-      "Generated files: optimized_model_movies.joblib, optimized_model_similarity.npz\n"
+      "Files saved: optimized_model_movies.joblib, optimized_model_similarity.npz\n"
      ]
     }
    ],
@@ -1563,17 +1560,18 @@
     "from scipy.sparse import csr_matrix, save_npz\n",
     "import joblib\n",
     "\n",
-    "# Option 1: Sparse matrix + compression (RECOMMENDED - keeps full functionality)\n",
-    "def save_optimized(movies, similarity, base_filename):\n",
-    "    # Save movies data with compression\n",
+    "# Add this to the end of your notebook to generate compatible optimized files\n",
+    "def save_optimized_compatible(movies, similarity, base_filename):\n",
+    "    # Save all necessary data for Streamlit compatibility\n",
     "    minimal_movies_data = {\n",
     "        'titles': movies['title'].tolist(),\n",
     "        'ids': movies['id'].tolist(),\n",
     "        'genres': movies['genres'].tolist(),\n",
     "        'vote_average': movies['vote_average'].tolist(),\n",
-    "        'overview': movies['overview'].tolist(),  # keep if you need it\n",
-    "        'cast': movies['cast'].tolist(),          # keep if you need it\n",
-    "        'crew': movies['crew'].tolist()           # keep if you need it\n",
+    "        'overview': movies['overview'].tolist(),\n",
+    "        'cast': movies['cast'].tolist(),\n",
+    "        'crew': movies['crew'].tolist(),\n",
+    "        'release_date': movies['release_date'].tolist()  # Add this line\n",
     "    }\n",
     "    \n",
     "    joblib.dump(minimal_movies_data, f\"{base_filename}_movies.joblib\", compress=9)\n",
@@ -1582,16 +1580,10 @@
     "    sparse_sim = csr_matrix(similarity.astype(np.float32))\n",
     "    save_npz(f\"{base_filename}_similarity.npz\", sparse_sim)\n",
     "    \n",
-    "    print(f\"Original similarity size: {similarity.nbytes / (1024**2):.2f} MB\")\n",
-    "    print(f\"Sparse similarity size: {sparse_sim.data.nbytes / (1024**2):.2f} MB\")\n",
-    "    \n",
-    "    return minimal_movies_data, sparse_sim\n",
+    "    print(f\"Files saved: {base_filename}_movies.joblib, {base_filename}_similarity.npz\")\n",
     "\n",
-    "# Save using Option 1 (recommended)\n",
-    "minimal_movies, sparse_similarity = save_optimized(movies, similarity, \"optimized_model\")\n",
-    "\n",
-    "print(\"Files saved successfully!\")\n",
-    "print(\"Generated files: optimized_model_movies.joblib, optimized_model_similarity.npz\")"
+    "# Generate the files\n",
+    "save_optimized_compatible(movies, similarity, \"optimized_model\")"
    ]
   },
   {
